--- a/index.html
+++ b/index.html
@@ -37,33 +37,33 @@
         
         <div id="league-selection" style="display: block;">
             <div style="display: flex; flex-wrap: wrap; justify-content: center; gap: 15px;">
-                <button class="league-btn" data-league="premier-league" style="padding: 15px 30px; font-size: 1.2em; font-weight: bold; cursor: pointer; background-color: #238636; color: white; border: none; border-radius: 5px; transition: background-color 0.3s; width: 220px;">Premier League ( England)</button>
+                <button class="league-btn" data-league="premier-league" style="padding: 15px 30px; font-size: 1.2em; font-weight: bold; cursor: pointer; background-color: #238636; color: white; border: none; border-radius: 5px; transition: background-color 0.3s; width: 220px;">Premier League <br> England </br></button>
 
 
 
-                <button class="league-btn" data-league="la-liga" style="padding: 15px 30px; font-size: 1.2em; font-weight: bold; cursor: pointer; background-color: #238636; color: white; border: none; border-radius: 5px; transition: background-color 0.3s; width: 220px;">La Liga ( Spanish)</button>
+                <button class="league-btn" data-league="la-liga" style="padding: 15px 30px; font-size: 1.2em; font-weight: bold; cursor: pointer; background-color: #238636; color: white; border: none; border-radius: 5px; transition: background-color 0.3s; width: 220px;">La Liga <br>Spanish</br></button>
 
 
 
-                <button class="league-btn" data-league="bundesliga" style="padding: 15px 30px; font-size: 1.2em; font-weight: bold; cursor: pointer; background-color: #238636; color: white; border: none; border-radius: 5px; transition: background-color 0.3s; width: 220px;">Bundesliga (Germany)</button>
-
-
-
-
-                <button class="league-btn" data-league="serie-a" style="padding: 15px 30px; font-size: 1.2em; font-weight: bold; cursor: pointer; background-color: #238636; color: white; border: none; border-radius: 5px; transition: background-color 0.3s; width: 220px;">Serie A ( Italy)  </button>
-
-
-
-                <button class="league-btn" data-league="serie-a" style="padding: 15px 30px; font-size: 1.2em; font-weight: bold; cursor: pointer; background-color: #238636; color: white; border: none; border-radius: 5px; transition: background-color 0.3s; width: 220px;">Ligue 1 ( french) </button>
-
-
-
-                <button class="league-btn" data-league="eredivisie" style="padding: 15px 30px; font-size: 1.2em; font-weight: bold; cursor: pointer; background-color: #238636; color: white; border: none; border-radius: 5px; transition: background-color 0.3s; width: 220px;">Eredivisie ( Nederlands)</button>
+                <button class="league-btn" data-league="bundesliga" style="padding: 15px 30px; font-size: 1.2em; font-weight: bold; cursor: pointer; background-color: #238636; color: white; border: none; border-radius: 5px; transition: background-color 0.3s; width: 220px;">Bundesliga <br> Germany</br></button>
 
 
 
 
-                <button class="league-btn" data-league="mls" style="padding: 15px 30px; font-size: 1.2em; font-weight: bold; cursor: pointer; background-color: #238636; color: white; border: none; border-radius: 5px; transition: background-color 0.3s; width: 220px;">Major League Soccer (All Majors Leagues) </button>
+                <button class="league-btn" data-league="serie-a" style="padding: 15px 30px; font-size: 1.2em; font-weight: bold; cursor: pointer; background-color: #238636; color: white; border: none; border-radius: 5px; transition: background-color 0.3s; width: 220px;">Serie A <br>Italy</br></button>
+
+
+
+                <button class="league-btn" data-league="serie-a" style="padding: 15px 30px; font-size: 1.2em; font-weight: bold; cursor: pointer; background-color: #238636; color: white; border: none; border-radius: 5px; transition: background-color 0.3s; width: 220px;">Ligue 1 <br> french</br> </button>
+
+
+
+                <button class="league-btn" data-league="eredivisie" style="padding: 15px 30px; font-size: 1.2em; font-weight: bold; cursor: pointer; background-color: #238636; color: white; border: none; border-radius: 5px; transition: background-color 0.3s; width: 220px;">Eredivisie <br> Nederlands</br></button>
+
+
+
+
+                <button class="league-btn" data-league="mls" style="padding: 15px 30px; font-size: 1.2em; font-weight: bold; cursor: pointer; background-color: #238636; color: white; border: none; border-radius: 5px; transition: background-color 0.3s; width: 220px;">Major League Soccer </button>
             </div>
         </div>
 
