--- a/vip.html
+++ b/vip.html
@@ -25,13 +25,15 @@
 
 
 
-<div style="position: relative; width: 600px; height: 350px; margin: auto; overflow: hidden; border-radius: 8px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);">
-    <img src="1xpromo.jpg" alt="Promotional Offer" style="width: 100%; height: 100%; object-fit: cover;">
+<div style="position: relative; width: 400px; height: 200px; margin: auto; overflow: hidden; border-radius: 8px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);">
+    <img src="1xpromo.jpg" alt="Promotional Offer" style="width: 50%; height: 500%; object-fit: cover;">
+<br>
     
     <div style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); text-align: center; color: white; text-shadow: 2px 2px 4px #000000; padding: 20px; background-color: rgba(0, 0, 0, 0.5); border-radius: 8px;">
         <h2 style="font-size: 2.5em; margin: 0; text-transform: uppercase;">Promocode:</h2>
+
         <p style="font-size: 4em; font-weight: bold; margin: 0;">IAMGODSWILL</p>
-        <p style="font-size: 1.2em; margin-top: 10px;">Use this code to unlock special VIP access!</p>
+        <p style="font-size: 1.2em; margin-top: 10px;">Use this code to register on 1xbet and also to unlock special VIP access!</p>
     </div>
 </div>
 
@@ -278,13 +280,15 @@
     </script>
 
 
-<div style="position: relative; width: 600px; height: 350px; margin: auto; overflow: hidden; border-radius: 8px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);">
-    <img src="1xpromo.jpg" alt="Promotional Offer" style="width: 100%; height: 100%; object-fit: cover;">
+<div style="position: relative; width: 400px; height: 200px; margin: auto; overflow: hidden; border-radius: 8px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);">
+    <img src="1xpromo.jpg" alt="Promotional Offer" style="width: 50%; height: 500%; object-fit: cover;">
+<br>
     
     <div style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); text-align: center; color: white; text-shadow: 2px 2px 4px #000000; padding: 20px; background-color: rgba(0, 0, 0, 0.5); border-radius: 8px;">
         <h2 style="font-size: 2.5em; margin: 0; text-transform: uppercase;">Promocode:</h2>
+
         <p style="font-size: 4em; font-weight: bold; margin: 0;">IAMGODSWILL</p>
-        <p style="font-size: 1.2em; margin-top: 10px;">Use this code to unlock special VIP access!</p>
+        <p style="font-size: 1.2em; margin-top: 10px;">Use this code to register on 1xbet and also to unlock special VIP access!</p>
     </div>
 </div>
 
