--- a/index.html
+++ b/index.html
@@ -12,17 +12,11 @@
 
 
 
-<div style="position: relative; width: 400px; height: 200px; margin: auto; overflow: hidden; border-radius: 8px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);">
-    <img src="1xpromo.jpg" alt="Promotional Offer" style="width: 50%; height: 500%; object-fit: cover;">
-<br>
-    
-    <div style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); text-align: center; color: white; text-shadow: 2px 2px 4px #000000; padding: 20px; background-color: rgba(0, 0, 0, 0.5); border-radius: 8px;">
-        <h2 style="font-size: 2.5em; margin: 0; text-transform: uppercase;">Promocode:</h2>
-
-        <p style="font-size: 4em; font-weight: bold; margin: 0;">IAMGODSWILL</p>
-        <p style="font-size: 1.2em; margin-top: 10px;">Use this code to register on 1xbet and also to unlock special VIP access!</p>
-    </div>
+<div style="width: 100%; max-width: 600px; margin: 20px auto; text-align: center;">
+<img src="1xpromo.jpg" alt="Promotional Offer" style="display: block; width: 100%; height: auto; border-radius: 8px; box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);">
+<p style="margin-top: 10px; font-size: 1.5em; font-weight: bold; color: #333;">IAMGODSWILL</p>
 </div>
+
 
 
 
@@ -267,17 +261,11 @@
 
 
 
-<div style="position: relative; width: 400px; height: 200px; margin: auto; overflow: hidden; border-radius: 8px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);">
-    <img src="1xpromo.jpg" alt="Promotional Offer" style="width: 50%; height: 500%; object-fit: cover;">
-<br>
-    
-    <div style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); text-align: center; color: white; text-shadow: 2px 2px 4px #000000; padding: 20px; background-color: rgba(0, 0, 0, 0.5); border-radius: 8px;">
-        <h2 style="font-size: 2.5em; margin: 0; text-transform: uppercase;">Promocode:</h2>
-
-        <p style="font-size: 4em; font-weight: bold; margin: 0;">IAMGODSWILL</p>
-        <p style="font-size: 1.2em; margin-top: 10px;">Use this code to register on 1xbet and also to unlock special VIP access!</p>
-    </div>
+<div style="width: 100%; max-width: 600px; margin: 20px auto; text-align: center;">
+<img src="1xpromo.jpg" alt="Promotional Offer" style="display: block; width: 100%; height: auto; border-radius: 8px; box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);">
+<p style="margin-top: 10px; font-size: 1.5em; font-weight: bold; color: #333;">IAMGODSWILL</p>
 </div>
+
 
 
 
