--- a/vip.html
+++ b/vip.html
@@ -169,9 +169,7 @@
 
     </main>
 
-    <footer style="margin-top: 50px; font-size: 0.8em; color: #8b949e;">
-        <p>&copy; 2025 RoboPredictor 3000</p>
-    </footer>
+    
 
     <script>
         document.addEventListener('DOMContentLoaded', () => {
@@ -277,6 +275,13 @@
 <img src="1xpromo1.jpg" alt="Promotional Offer" style="display: block; width: 100%; height: auto; border-radius: 8px; box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);">
 <p style="margin-top: 10px; font-size: 1.5em; font-weight: bold; color: #333;">IAMGODSWILL</p>
 </div>
+
+
+
+
+<footer style="margin-top: 50px; font-size: 0.8em; color: #8b949e;">
+        <p>&copy; 2025 COMPETENTRADERS PREDICTIONS</p>
+    </footer>
 
 </body>
 </html>
