--- a/vip.html
+++ b/vip.html
@@ -175,17 +175,17 @@
         document.addEventListener('DOMContentLoaded', () => {
             const predictionsData = {
                 "premier-league": [
-                    { teams: "Manchester City vs. Arsenal" },
-                    { teams: "Liverpool vs. Tottenham" },
-                    { teams: "Chelsea vs. Manchester United" }
+                    { teams: "Team 1 VS Team 2" },
+                    { teams: "Team 1 VS Team 2" },
+                    { teams: "Team 1 VS Team 2" }
                 ],
 
 
 
 
                 "la-liga": [
-                    { teams: "Real Madrid vs. Barcelona" },
-                    { teams: "Atlético Madrid vs. Valencia" }
+                    { teams: "Team 1 VS Team 2" },
+                    { teams: "Team 1 VS. Team 2" }
                 ],
 
 
@@ -193,8 +193,8 @@
 
 
                 "bundesliga": [
-                    { teams: "Bayern Munich vs. Borussia Dortmund" },
-                    { teams: "RB Leipzig vs. Bayer Leverkusen" }
+                    { teams: "Team 1 VS  Team 2" },
+                    { teams: " Team 1 VS Team 2" }
                 ],
 
 
@@ -202,8 +202,8 @@
 
 
                 "serie-a": [
-                    { teams: "Inter Milan vs. AC Milan" },
-                    { teams: "Juventus vs. Napoli" }
+                    { teams: "Team 1 VS Team 2" },
+                    { teams: "Team 1 VS Team 2" }
                 ],
 
 
@@ -212,7 +212,7 @@
 
 
                 "eredivisie": [
-                    { teams: "Ajax vs. Feyenoord" }
+                    { teams: "Team 1 VS Team 2" }
                 ],
 
 
@@ -220,7 +220,7 @@
 
 
                 "mls": [
-                    { teams: "LA Galaxy vs. LAFC" }
+                    { teams: "Team 1 VS Team 2" }
                 ]
             };
 
