--- a/index.html
+++ b/index.html
@@ -117,17 +117,17 @@
             const predictionsData = {
                 "premier-league": [
                     {
-                        teams: "Manchester City vs. Arsenal",
-                        score: "2 - 1",
-                        note: "Based on algorithmic analysis of recent form and offensive output, Manchester City's home advantage and superior tactical depth gives them a narrow edge. Expect a high-scoring match with an intense second half."
+                        teams: "team1 vs. Team2",
+                        score: "0 - 0",
+                        note: "No bet for this day."
                     },
 
 
 
                     {
-                        teams: "Liverpool vs. Tottenham",
-                        score: "3 - 0",
-                        note: "Statistical models indicate Liverpool's high-pressing system and attacking efficiency will overwhelm Tottenham's defense. The predicted score reflects a dominant performance at home with a clean sheet."
+                        teams: "team1 vs. team2",
+                        score: "0 - 0",
+                        note: "no bet check back later."
                     },
 
 
@@ -138,9 +138,9 @@
                 ],
                 "la-liga": [
                     {
-                        teams: "Real Madrid vs. Barcelona",
-                        score: "1 - 1",
-                        note: "Historical data and current player ratings point to a fiercely contested El Clásico. Both teams possess significant offensive threats, but defensive solidity will lead to a predicted draw. The data suggests a low-scoring affair."
+                        teams: "team 1 vs. team 2",
+                        score: "0 - 0",
+                        note: "No bet ."
                     },
 
 
@@ -150,9 +150,9 @@
                 ],
                 "bundesliga": [
                     {
-                        teams: "Bayern Munich vs. Borussia Dortmund",
-                        score: "3 - 2",
-                        note: "Analysis of attacking metrics and historical performance in this derby suggests a high-intensity, back-and-forth game. Bayern's home goal-scoring rate gives them a slight advantage, though Dortmund's counter-attack remains a significant threat."
+                        teams: "team 1 vs. team 2",
+                        score: "0 - 0",
+                        note: "No bet."
                     },
 
 
@@ -162,9 +162,9 @@
                 ],
                 "serie-a": [
                     {
-                        teams: "Inter Milan vs. AC Milan",
-                        score: "2 - 0",
-                        note: "The RoboPredictor model has identified Inter Milan's current defensive organization as a key factor. AC Milan's attack may struggle to break through, leading to a comfortable home victory for Inter. The predicted score reflects this defensive strength."
+                        teams: "Team 1 vs. Team 2",
+                        score: "0 - 0",
+                        note: "No bet."
                     },
 
 
@@ -175,9 +175,9 @@
                 ],
                 "eredivisie": [
                     {
-                        teams: "Ajax vs. Feyenoord",
-                        score: "2 - 2",
-                        note: "RoboPredictor's algorithms predict a thrilling 'Klassieker.' Both teams demonstrate high offensive stats, but defensive lapses are also common. The final result will likely be a high-scoring draw."
+                        teams: "Team 1 vs. Team 2",
+                        score: "0 - 0",
+                        note: "No bet."
                     },
 
 
@@ -188,9 +188,9 @@
                 ],
                 "mls": [
                     {
-                        teams: "LA Galaxy vs. LAFC",
-                        score: "1 - 3",
-                        note: "Analysis of recent derby matches and form suggests that LAFC's more organized midfield and clinical finishing will give them the edge over LA Galaxy. A decisive away victory is predicted."
+                        teams: "Team 1 vs. Team 2",
+                        score: "0 - 0",
+                        note: "No bet."
                     },
 
 
