--- a/index.html
+++ b/index.html
@@ -117,18 +117,33 @@
             const predictionsData = {
                 "premier-league": [
                     {
-                        teams: "team1 vs. Team2",
-                        score: "0 - 0",
-                        note: "No bet for this day."
+                        teams: "team1 (Aston villa)  vs. Team2 ( new castle)",
+                        score: "short towards the goal",
+                        note: "bet for this day. (over 25.5) 1.9 odds"
                     },
 
 
 
                     {
-                        teams: "team1 vs. team2",
-                        score: "0 - 0",
-                        note: "no bet check back later."
+                        teams: "team1(Tot hotpurs) vs. team2 (burnley)",
+                        score: "yellow card",
+                        note: "Over 3  , please take note, it is over 3 not over 3.5 (1.33 odds)"
                     },
+
+
+
+                    {
+                        teams: "team1(Wolves) vs. team2 (Man city)",
+                        score: "1X",
+                        note: "(2.3 odds)"
+                    },
+
+
+
+
+
+
+
 
 
 
@@ -138,10 +153,42 @@
                 ],
                 "la-liga": [
                     {
-                        teams: "team 1 vs. team 2",
-                        score: "0 - 0",
-                        note: "No bet ."
+                        teams: "team 1 (Mallorca) vs. team 2 (Barcelona)",
+                        score: "Barca to win",
+                        note: "Odds 1.44 ."
                     },
+
+
+                    {
+                        teams: "team 1 (Mallorca) vs. team 2 (Barcelona)",
+                        score: "Player Stats selection ( Lamine yamal to score goal at any time)",
+                        note: "Odds 2.43 ."
+                    },
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
