--- a/index.html
+++ b/index.html
@@ -124,6 +124,11 @@
 
 
 
+
+
+
+      "premier-league": [
+
                     {
                         teams: "team1(Tot hotpurs) vs. team2 (burnley)",
                         score: "yellow card",
@@ -132,6 +137,10 @@
 
 
 
+
+
+
+      "premier-league": [
                     {
                         teams: "team1(Wolves) vs. team2 (Man city)",
                         score: "1X",
@@ -159,6 +168,9 @@
                     },
 
 
+
+                  ],
+                "la-liga": [
                     {
                         teams: "team 1 (Mallorca) vs. team 2 (Barcelona)",
                         score: "Player Stats selection ( Lamine yamal to score goal at any time)",
