--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Competentraders Robot 🤖 Prediction</title>
+    <title>Competentraders Robot  Prediction</title>
 </head>
 <body style="background-color: #0d1117; color: #c9d1d9; font-family: 'Courier New', Courier, monospace; text-align: center; padding: 20px;">
 
@@ -127,25 +127,6 @@
 
 
 
-      "premier-league": [
-
-                    {
-                        teams: "team1(Tot hotpurs) vs. team2 (burnley)",
-                        score: "yellow card",
-                        note: "Over 3  , please take note, it is over 3 not over 3.5 (1.33 odds)"
-                    },
-
-
-
-
-
-
-      "premier-league": [
-                    {
-                        teams: "team1(Wolves) vs. team2 (Man city)",
-                        score: "1X",
-                        note: "(2.3 odds)"
-                    },
 
 
 
@@ -169,13 +150,7 @@
 
 
 
-                  ],
-                "la-liga": [
-                    {
-                        teams: "team 1 (Mallorca) vs. team 2 (Barcelona)",
-                        score: "Player Stats selection ( Lamine yamal to score goal at any time)",
-                        note: "Odds 2.43 ."
-                    },
+                  
 
 
 
